--- a/index.html
+++ b/index.html
@@ -499,8 +499,9 @@
           </div>
 
           <div class="form-field">
-            <input type="checkbox" name="policy" id="policy" class="checkbox">
-            <label class="policy" for="policy"><span class="icon-checkbox"></span>Погоджуюся з розсилкою та приймаю <a href="#" class="policy-text">Умови договору</a>
+            <label class="policy" for="policy">
+              <input type="checkbox" name="policy" id="policy" class="checkbox">
+              <span class="icon-checkbox"></span>Погоджуюся з розсилкою та приймаю <a href="#" class="policy-text">Умови договору</a>
             </label>
           </div>
   
