--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <div class="butt-type" role="group">
           <p class="butt-text">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
           <div class="butt-join">
-            <input type="email" name="email" value="E-mail" class="link-input">
+            <input type="email" name="email" class="link-input" placeholder="E-mail" autocomplete="email">
             <button class="link-butt" type="button">Підписатися 
               <svg class="icon-icon-send" width="24" height="24">
                 <use href="./images/icon/symbol-defs_2.svg#icon-icon-send"></use>
@@ -470,7 +470,7 @@
         <h2 class="form-h2">Залиште свої дані, ми вам передзвонимо</h2>
         <form autocomplete="off" class="form">
           <div class="form-field">
-            <input type="text" nama="name" id="name" class="form-input" placeholder=" ">
+            <input type="text" nama="name" id="name" class="form-input" placeholder=" " autocomplete="on">
             <label for="name" class="form-label">Ім'я</label>
               <svg class="icon-modal" width="20" height="20">
                 <use href="./images/icon/symbol-defs_2.svg#icon-person-black-18dp"></use>
@@ -486,7 +486,7 @@
           </div>
 
           <div class="form-field">
-            <input type="email" nama="email" id="email" class="form-input" placeholder=" ">
+            <input type="email" nama="email" id="email" class="form-input" placeholder=" " autocomplete="on">
             <label for="email" class="form-label">Пошта</label>
               <svg class="icon-modal" width="20" height="20">
                 <use href="./images/icon/symbol-defs_2.svg#icon-email-black-18dp"></use>
