--- a/portfolio.html
+++ b/portfolio.html
@@ -328,7 +328,7 @@
         <div class="butt-type" role="group">
           <p class="butt-text">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
           <div class="butt-join">
-            <input type="email" name="email" value="E-mail" class="link-input">
+            <input type="email" name="email" class="link-input" placeholder="E-mail" autocomplete="email">
             <button class="link-butt" type="button">Підписатися 
               <svg class="icon-icon-send" width="24" height="24">
                 <use href="./images/icon/symbol-defs_2.svg#icon-icon-send"></use>
