--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </button>
       </section>
 
-      <!-- Cards--Skills -->
+      <!-- Cards Skills -->
       <section class="cards">
         <div class="container">
           <ul class="list-skills">
